# mybookdb

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  config.h.in  index.html  params.json  version.h.in
cmake/: FindCrypto.cmake  FindGit.cmake  FindSqlite3.cmake  GetGitCommitVersion.cmake
lib/: CMakeLists.txt  libsettings.h
lib/aws/: CMakeLists.txt
res/: ressources.qrc
src/: CMakeLists.txt  amazonsearch.cpp  amazonsearch.h  app.cpp  app.h  config.cpp  config.h  entry.cpp  entry.h  imagestore.cpp  imagestore.h  isbn.cpp  isbn.h  library.cpp  library.h  library.h.autosave  main.cpp  networkscanner.cpp  networkscanner.h  uihelpers.cpp  uihelpers.h
src/ui/: bookdescription.cpp  bookdescription.h  bookdescription.ui  datechooser.cpp  datechooser.h  fieldmanager.cpp  fieldmanager.h  groupboxcollapse.cpp  groupboxcollapse.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  overview.cpp  overview.h  overview.ui  ratingbar.cpp  ratingbar.h  toolbargroups.cpp  toolbargroups.h  toolbargroups.ui
translation/: CMakeLists.txt  language_de.ts  language_en.ts
